--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
+amqp==5.2.0
 APScheduler==3.10.4
 asgiref==3.7.2
+async-timeout==4.0.3
+billiard==4.2.0
+celery==5.3.5
 certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.0
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 cryptography==41.0.4
 defusedxml==0.7.1
 Django==4.2.6
@@ -10,15 +18,22 @@ django-allauth==0.57.0
 django-apscheduler==0.6.2
 django-filter==23.3
 idna==3.4
+kombu==5.3.3
 oauthlib==3.2.2
+prompt-toolkit==3.0.41
 pycparser==2.21
 PyJWT==2.8.0
+python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2023.3.post1
+redis==5.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
+tzdata==2023.3
 tzlocal==5.2
 urllib3==2.0.6
+vine==5.1.0
+wcwidth==0.2.10
